# app/Models/Access.php
@@ -4,8 +4,31 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
 
 class Access extends Model
 {
     use HasFactory;
+    use SoftDeletes;
+
+    protected $fillable = [
+        'typeuser_id',
+        'optionmenu_id',
+    ];
+
+    protected $hidden = [
+        'created_at',
+        'updated_at',
+        'deleted_at',
+    ];
+
+    public function optionMenu()
+    {
+        return $this->belongsTo(OptionMenu::class, 'optionmenu_id');
+    }
+
+    public function typeUser()
+    {
+        return $this->belongsTo(TypeUser::class, 'typeuser_id');
+    }
 }
